internal/operator/inventory/manifests/dpuservice-controller.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: manager
    app.kubernetes.io/part-of: dpuservice-controller-manager
    dpu.nvidia.com/component: dpuservice-controller-manager
  name: dpuservice-webhook-service
  namespace: dpuservice-controller-system
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app.kubernetes.io/part-of: dpuservice-controller-manager
    dpu.nvidia.com/component: dpuservice-controller-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: manager
    app.kubernetes.io/part-of: dpuservice-controller-manager
    dpu.nvidia.com/component: dpuservice-controller-manager
  name: dpuservice-controller-manager
  namespace: dpuservice-controller-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: dpuservice-controller-manager
      dpu.nvidia.com/component: dpuservice-controller-manager
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        app.kubernetes.io/part-of: dpuservice-controller-manager
        dpu.nvidia.com/component: dpuservice-controller-manager
    spec:
      containers:
      - command:
        - /dpuservice
        - --leader-elect
        image: example.com/dpf-system:v0.1.0
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        - containerPort: 8080
          name: metrics
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      serviceAccountName: dpuservice-controller-manager
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: dpuservice-webhook-server-cert
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: dpuservice-controller-system/dpuservice-serving-cert
  labels:
    app.kubernetes.io/component: manager
    app.kubernetes.io/part-of: dpuservice-controller-manager
    dpu.nvidia.com/component: dpuservice-controller-manager
  name: dpuservice-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: dpuservice-webhook-service
      namespace: dpuservice-controller-system
      path: /validate-svc-dpu-nvidia-com-v1alpha1-dpuserviceipam
  failurePolicy: Fail
  name: ipam-validator.svc.dpu.nvidia.com
  rules:
  - apiGroups:
    - svc.dpu.nvidia.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - dpuserviceipams
  sideEffects: None
