internal/operator/inventory/manifests/provisioning-controller.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: webhook
    app.kubernetes.io/part-of: dpf-provisioning-controller-manager
    dpu.nvidia.com/component: dpf-provisioning-controller-manager
  name: dpf-provisioning-webhook-service
  namespace: dpf-provisioning
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app.kubernetes.io/part-of: dpf-provisioning-controller-manager
    dpu.nvidia.com/component: dpf-provisioning-controller-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: manager
    app.kubernetes.io/part-of: dpf-provisioning-controller-manager
    dpu.nvidia.com/component: dpf-provisioning-controller-manager
  name: dpf-provisioning-controller-manager
  namespace: dpf-provisioning
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: dpf-provisioning-controller-manager
      dpu.nvidia.com/component: dpf-provisioning-controller-manager
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        app.kubernetes.io/part-of: dpf-provisioning-controller-manager
        dpu.nvidia.com/component: dpf-provisioning-controller-manager
    spec:
      containers:
      - args:
        - --leader-elect
        - --v=3
        - --dms-image=example.com/doca-platform-foundation/dpf-provisioning-controller/hostdriver:v0.1.0
        - --hostnetwork-image=example.com/doca-platform-foundation/dpf-provisioning-controller/hostdriver:v0.1.0
        - --bfb-pvc=bfb-pvc
        command:
        - /provisioning
        image: example.com/dpf-system:v0.1.0
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        - containerPort: 8080
          name: metrics
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 2
            memory: 2Gi
          requests:
            cpu: 1
            memory: 1Gi
        securityContext:
          capabilities:
            drop:
            - ALL
          privileged: true
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
        - mountPath: /bfb
          name: bfb-volume
      imagePullSecrets:
      - name: dpf-provisioning-regcred
      serviceAccountName: dpf-provisioning-controller-manager
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: webhook-server-cert
      - name: bfb-volume
        persistentVolumeClaim:
          claimName: bfb-pvc
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: dpf-provisioning/dpf-provisioning-serving-cert
  labels:
    app.kubernetes.io/part-of: dpf-provisioning-controller-manager
    dpu.nvidia.com/component: dpf-provisioning-controller-manager
  name: dpf-provisioning-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: dpf-provisioning-webhook-service
      namespace: dpf-provisioning
      path: /mutate-provisioning-dpu-nvidia-com-v1alpha1-dpuset
  failurePolicy: Fail
  name: mdpuset.kb.io
  rules:
  - apiGroups:
    - provisioning.dpu.nvidia.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - dpusets
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: dpf-provisioning/dpf-provisioning-serving-cert
  labels:
    app.kubernetes.io/part-of: dpf-provisioning-controller-manager
    dpu.nvidia.com/component: dpf-provisioning-controller-manager
  name: dpf-provisioning-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: dpf-provisioning-webhook-service
      namespace: dpf-provisioning
      path: /validate-provisioning-dpu-nvidia-com-v1alpha1-bfb
  failurePolicy: Fail
  name: vbfb.kb.io
  rules:
  - apiGroups:
    - provisioning.dpu.nvidia.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - bfbs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: dpf-provisioning-webhook-service
      namespace: dpf-provisioning
      path: /validate-provisioning-dpu-nvidia-com-v1alpha1-dpuflavor
  failurePolicy: Fail
  name: vdpuflavor.kb.io
  rules:
  - apiGroups:
    - provisioning.dpu.nvidia.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - dpuflavors
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: dpf-provisioning-webhook-service
      namespace: dpf-provisioning
      path: /validate-provisioning-dpu-nvidia-com-v1alpha1-dpuset
  failurePolicy: Fail
  name: vdpuset.kb.io
  rules:
  - apiGroups:
    - provisioning.dpu.nvidia.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - dpusets
  sideEffects: None
